Provide wall variant MCItem